--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,16 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+.table-conatiner th, td{
+  padding: 0.5em;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
