--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,12 @@
   gap: 0.5em;
 }
 
-.table-conatiner th, td{
+.table-container th, td{
   padding: 0.5em;
+}
+
+.codemirror {
+  color: black;
 }
 
 @keyframes logo-spin {
@@ -61,6 +65,25 @@ a {
   padding: 0.5em;
 }
 
+.button {
+  gap: 1em;
+  margin: 0.5em;
+  background-color: #2195f365;
+}
+
+.output {
+  border: 3px solid #2196F3;
+  padding: 10px;
+  border-radius: 15px;
+  background-color: #454545;
+}
+
+.output h1 {
+  padding-top: 10px;
+  margin-top: 5px;
+  font-size: 2em;
+}
+
 .switch {
   position: relative;
   display: inline-block;
@@ -73,6 +96,19 @@ a {
   width: 0;
   height: 0;
 }
+
+.switch-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin: 20px 0;
+}
+
+.switch-label {
+  font-size: 1rem;
+  color: #2196F3;
+}
+
 
 .slider {
   position: absolute;
